syntax = "proto3";

service Host {

  rpc addPlayer (AddPlayerRequest) returns (AddPlayerReply) {}

  rpc listPlayer (ListPlayerRequest) returns (stream ListPlayerReply) {}

  rpc playerRing (PlayerRingRequest) returns (stream PlayerRingReply) {}

  rpc cardHand (CardHandRequest) returns (stream CardHandReply) {}
}

message AddPlayerRequest {
  string playerId = 1;
}

message AddPlayerReply {
  bool success = 1;
}

message ListPlayerRequest {}

message ListPlayerReply {
  double timestamp = 1;
  string address = 2;
  string playerId = 3;
}

message PlayerRingRequest {}

message PlayerRingReply {
  string address = 1;
  string playerId = 2;
  bool isPlayer = 3;
}

message CardHandRequest {}

message CardHandReply {
  int32 card = 1;
}
